# DBManager

./: .gitignore  CMakeLists.txt  README.md  Test.db  example.db  imgui.ini  log.txt
Headers/: App.h  Database.h  FileDialog.h  LayoutDimensions.h  Logger.h  LoggerUI.h  QueryConsole.h  SchemaEditor.h  SchemaEditorUI.h  Window.h  core_types.h
src/: App.cpp  Database.cpp  FileDialog.cpp  LoggerUI.cpp  QueryConsole.cpp  SchemaEditor.cpp  SchemaEditorUI.cpp  Window.cpp  main.cpp
x64/Debug/: LayoutDimensions.h_24D99715205A9E5A.ifc.dt.d.json  LayoutDimensions.h_24D99715205A9E5A.ifc.dt.module.json  LayoutDimensions.h_24D99715205A9E5A.ifc.dt.module.json.command  core_types.h.ifc.d.json  core_types.h.module.json  core_types.h_540AF19D779FDA4.ifc.dt.module.json  core_types.h_540AF19D779FDA4.ifc.dt.module.json.command  layoutdimensions.h.module.json  openGl.exe.recipe  vc143.idb
x64/Debug/microsoft/STL/: std.compat.ixx.ifc.dt.module.json.command  std.ixx.ifc.dt.module.json.command
x64/Debug/openGl.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  openGl.lastbuildstate
x64/Debug/openGl_MD.tlog/: CL.command.1.tlog  Microsoft.Build.CPPTasks.CL.read.1.tlog  Microsoft.Build.CPPTasks.CL.write.1.tlog
